# pulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  improvements.md  next_indexes.md
backend/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_releases_unique_index.py  0003_multi_measure.py  0004_currency_proxy.py
backend/data/: calendar.json  series.seed.json
backend/src/api_extractor/: __init__.py  config.py  db.py  deps.py  jobs.py  main.py  openapi_export.py  scheduler.py  seed.py
backend/src/api_extractor/calendar_scraper/: __init__.py  _mapping.py  base.py  bcb.py  hardcoded.py  ibge.py  service.py
backend/src/api_extractor/extractors/: __init__.py  anbima_bulk.py  anbima_ima.py  b3_portal.py  b3_yahoo.py  base.py  bcb_sgs.py  ibge_sidra.py  registry.py
backend/src/api_extractor/models/: __init__.py  observation.py  release.py  revision.py  series.py  user_prefs.py
backend/src/api_extractor/repos/: __init__.py  base.py  observation_repo.py  release_repo.py  series_repo.py  user_prefs_repo.py
backend/src/api_extractor/routers/: __init__.py  admin.py  health.py  release.py  series.py  transform.py  user_prefs.py
backend/src/api_extractor/schemas/: __init__.py  admin.py  common.py  observation.py  release.py  series.py  transform.py  user_prefs.py
backend/src/api_extractor/scripts/: backfill_anbima.py
backend/src/api_extractor/services/: __init__.py  backfill_service.py  extraction_service.py
backend/src/api_extractor/transforms/: __init__.py  cache.py  ops.py  registry.py  service.py  spec.py
backend/tests/: __init__.py  conftest.py  fixtures_api.py  test_acceptance_e2e.py  test_api_acceptance.py  test_api_admin_backfill.py  test_api_admin_extract.py  test_api_admin_refresh.py  test_api_admin_scheduler.py  test_api_health.py  test_api_release.py  test_api_series.py  test_api_transform.py  test_api_user_prefs.py  test_calendar_scraper.py  test_extractor_anbima.py  test_extractor_anbima_bulk.py  test_extractor_b3_portal.py  test_extractor_b3_yahoo.py  test_extractor_bcb.py  test_extractor_ibge.py  test_extractor_intl.py  test_jobs.py  test_migration_hypertable.py  test_openapi_schema.py  test_repos_observation.py  test_repos_series.py  test_scheduler.py  test_seed.py  test_series_next_release.py  test_transform_cache.py  test_transforms.py
backend/tests/fixtures/anbima_bulk/: IMAGERAL-HISTORICO.xls
backend/tests/fixtures/anbima_ima/: IMA-Geral_ex-C.xls  IMA_SH_04052015.csv  IMA_SH_07052026.csv  IMA_SH_08052026.csv  IMA_SH_08052026.xml  IMA_SH_11052021.csv  IRF-M_1.xls  ima_completo.txt  ima_completo.xls  ima_completo.xml
(+196 files in other folders)
